--- a/jetty-cxf/pom.xml
+++ b/jetty-cxf/pom.xml
@@ -195,14 +195,16 @@
         </configuration>
       </plugin>
 
-      <!-- Allows the routes to be run via 'mvn camel:run' -->
+      <!-- Allows the routes to be run via 'mvn camel:run' 
+           Loads context from src/main/resources/META-INF/spring/camel-context.xml
+      -->
       <plugin>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-maven-plugin</artifactId>
         <version>${project.version}</version>
         <configuration>
           <!-- turn on reload when the XML file is updated in the source code -->
-          <fileWatcherDirectory>src/main/resources</fileWatcherDirectory>
+          <fileWatcherDirectory>src/main/resources/META-INF/spring</fileWatcherDirectory>
         </configuration>
       </plugin>
 
