--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
     <groupId>org.apache.camel</groupId>
     <artifactId>camel-parent</artifactId>
     <version>2.20.2</version>
-    <relativePath>../parent</relativePath>
   </parent>
 
   <artifactId>examples</artifactId>
@@ -36,6 +35,7 @@
 
   <modules>
     <module>jetty-cxf</module>
+    <module>reload</module>
   </modules>
 
   <properties>
@@ -45,6 +45,14 @@
     <skip.starting.camel.context>false</skip.starting.camel.context>
     <camel.osgi.export.pkg />
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.5</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <resources>
