rename reload to standalone-main, use single xml context for jetty-cxf

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <modules>
     <module>jetty-cxf</module>
-    <module>reload</module>
+    <module>standalone-main</module>
   </modules>
 
   <properties>
