--- a/jetty-cxf/src/main/webapp/WEB-INF/web.xml
+++ b/jetty-cxf/src/main/webapp/WEB-INF/web.xml
@@ -21,30 +21,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-  <display-name>My Web Application</display-name>
+    <display-name>My Web Application</display-name>
 
-  <!-- location of spring xml files -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:camel-context.xml</param-value>
-  </context-param>
+    <!-- location of spring xml files -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>file:src/main/resources/META-INF/spring/camel-context.xml</param-value>
+    </context-param>
 
-  <!-- the listener that kick-starts Spring -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+    <!-- the listener that kick-starts Spring -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
-  <!-- CXF servlet -->
-  <servlet>
-    <servlet-name>CXFServlet</servlet-name>
-    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+    <!-- CXF servlet -->
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
-  <!-- all our webservices are mapped under this URI pattern -->
-  <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/webservices/*</url-pattern>
-  </servlet-mapping>
+    <!-- all our webservices are mapped under this URI pattern -->
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/webservices/*</url-pattern>
+    </servlet-mapping>
 
 </web-app>
