--- a/standalone-main/pom.xml
+++ b/standalone-main/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>camel-spring</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-http</artifactId>
+        </dependency>
+
         <!-- logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
