Use the same properties file for routes and beans configuration

--- a/standalone-main/src/main/resources/nitra-camel.properties
+++ b/standalone-main/src/main/resources/nitra-camel.properties
@@ -16,4 +16,6 @@
 ## ---------------------------------------------------------------------------
 
 # properties for the application
-basic.authorization=
+camel.basic.authorization=
+csvProcessor.maxGapInSeconds=2400
+csvProcessor.date=2018-02-13
