Use jira.username and jira.password properties together with authenticationPreemptive=true

--- a/standalone-main/src/main/resources/nitra-camel.properties
+++ b/standalone-main/src/main/resources/nitra-camel.properties
@@ -15,7 +15,11 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-# properties for the application
-camel.basic.authorization=
+# configs for camel routes referenced by {{key}}
+jira.host=aevi-tools.atlassian.net
+jira.username=
+jira.password=
+
+# configs for processors
 csvProcessor.maxGapInSeconds=2400
 csvProcessor.date=2018-02-13
