--- a/standalone-main/src/main/resources/nitra-camel.properties
+++ b/standalone-main/src/main/resources/nitra-camel.properties
@@ -23,3 +23,14 @@ jira.password=
 # configs for processors
 csvProcessor.maxGapInSeconds=2400
 csvProcessor.date=2018-02-13
+
+# KPN JASPER
+# http://kpn.jasperwireless.com/ws/schema/Terminal.wsdl stored locally
+# as resource org/apache/camel/example/reload/Terminal.wsdl
+jasper.url=Terminal.wsdl
+jasper.username=
+jasper.password=
+jasper.license.key=
+jasper.activation.rate.plan=
+jasper.deactivation.rate.plan=
+# END KPN JASPER
