default route watch directory `routes`, `csvProcessor.transactionDate` and `csvProcessor.maxGapInSeconds` properties, Jasper proc - arrays of iccIds, Jira proc constants. `maven-shade-plugin` with `META-INF/cxf/bus-extensions.txt` resource, changed output file name, updated readme

--- a/standalone-main/pom.xml
+++ b/standalone-main/pom.xml
@@ -112,6 +112,52 @@
                 </configuration>
             </plugin>
 
+            <!--
+            https://stackoverflow.com/questions/6831954/how-to-package-an-apache-cxf-application-into-a-monolithic-jar-with-the-maven-s
+            http://cxf.apache.org/docs/bundling-cxf-into-single-jar-with-maven-shade-plugin.html
+            NPE at org.apache.cxf.jaxws.ServiceImpl.initializePorts, missing extension WSDLManager.class
+
+            mvn clean compile package
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.apache.camel.example.reload.CamelReloadMain</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/cxf/bus-extensions.txt</resource>
+                                </transformer>
+                            </transformers>
+                            <outputFile>nitra-camel-2.20.2-standalone-with-dependencies.jar</outputFile>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- mvn clean compile assembly:single -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
