--- a/standalone-main/src/main/resources/nitra-camel.properties
+++ b/standalone-main/src/main/resources/nitra-camel.properties
@@ -22,7 +22,7 @@ jira.password=
 
 # configs for processors
 csvProcessor.maxGapInSeconds=2400
-csvProcessor.date=2018-02-13
+csvProcessor.transactionDate=2018-02-13
 
 # KPN JASPER
 # http://kpn.jasperwireless.com/ws/schema/Terminal.wsdl stored locally
