add separete routes for data usage and max gap.

--- a/standalone-main/src/main/resources/nitra-camel.properties
+++ b/standalone-main/src/main/resources/nitra-camel.properties
@@ -21,8 +21,9 @@ jira.username=
 jira.password=
 
 # configs for processors
-csvProcessor.maxGapInSeconds=2400
-csvProcessor.transactionDate=2018-02-13
+maxGapProcessor.maxGapInSeconds=2400
+maxGapProcessor.transactionDate=2018-02-13
+dataUsage.bytesPerTransaction=2000
 
 # KPN JASPER
 # http://kpn.jasperwireless.com/ws/schema/Terminal.wsdl stored locally
