--- a/standalone-main/pom.xml
+++ b/standalone-main/pom.xml
@@ -141,7 +141,7 @@
                                     <resource>META-INF/cxf/bus-extensions.txt</resource>
                                 </transformer>
                             </transformers>
-                            <outputFile>nitra-camel-2.20.2-standalone-with-dependencies.jar</outputFile>
+                            <outputFile>${basedir}/target/nitra-camel-2.20.2-standalone-with-dependencies.jar</outputFile>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -155,22 +155,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <!-- mvn clean compile assembly:single -->
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>org.apache.camel.example.reload.CamelReloadMain</mainClass>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
             </plugin>
 
             <!-- CXF wsdl2java generator, will plugin to the compile goal -->
